objects/IAM_Federation_Configuration_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>IAM_Community_Domain_For_IAM_APP__c</fullName>
        <defaultValue>$Label.IDM_Domain</defaultValue>
        <label>Community Domain For IAM APP</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_SSO_Configuration_ID__c</fullName>
        <label>SSO Configuration ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Federation_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Federation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Federation Configuration Settings</label>
    <pluralLabel>Federation Configuration Settings</pluralLabel>
</CustomObject>